--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JDLtechworks website template",
   "main": "webpack.config.js",
   "scripts": {
-    "dev": "./node_modules/.bin/webpack-dev-server --content-base dist --inline --hot",
+    "dev": "./node_modules/.bin/webpack-dev-server --content-base dist --inline --hot --history-api-fallback",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +27,9 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "breakpoint-sass": "https://github.com/at-import/breakpoint.git",
+    "compass-mixins": "^0.12.10",
+    "file": "^0.2.2",
     "js-cookie": "^2.1.1",
     "lodash": "^4.11.1",
     "moment": "^2.13.0",
@@ -39,17 +42,19 @@
     "react-serial-forms": "^2.0.6",
     "react-slick": "^0.12.2",
     "react-sortablejs": "^1.0.0",
-    "sortablejs": "^1.4.2"
+    "sortablejs": "^1.4.2",
+    "susy": "^2.2.12"
   },
   "devDependencies": {
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "node-normalize-scss": "^1.3.1",
     "node-sass": "^3.7.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   }
 }
