--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jdltechworks/smacss#readme",
   "dependencies": {
     "axios": "^0.11.0",
+    "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-react-html-attrs": "^2.0.0",
@@ -27,12 +28,12 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "breakpoint-sass": "https://github.com/at-import/breakpoint.git",
     "compass-mixins": "^0.12.10",
     "file": "^0.2.2",
     "js-cookie": "^2.1.1",
     "lodash": "^4.11.1",
     "moment": "^2.13.0",
+    "node-sass": "^3.8.0",
     "react": "^0.14.8",
     "react-datepicker": "^0.27.0",
     "react-dom": "^0.14.8",
@@ -50,7 +51,6 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "node-normalize-scss": "^1.3.1",
-    "node-sass": "^3.7.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
