Adding materials design

--- a/package.json
+++ b/package.json
@@ -30,20 +30,16 @@
     "babel-preset-stage-0": "^6.5.0",
     "compass-mixins": "^0.12.10",
     "file": "^0.2.2",
-    "js-cookie": "^2.1.1",
     "lodash": "^4.11.1",
+    "material-ui": "^0.15.0-beta.2",
     "moment": "^2.13.0",
     "node-sass": "^3.8.0",
-    "react": "^0.14.8",
-    "react-datepicker": "^0.27.0",
-    "react-dom": "^0.14.8",
-    "react-dropzone": "^3.4.0",
-    "react-router": "^2.0.1",
-    "react-router-redux": "^4.0.2",
-    "react-serial-forms": "^2.0.6",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-dropzone": "^3.5.2",
+    "react-router": "^2.5.2",
     "react-slick": "^0.12.2",
-    "react-sortablejs": "^1.0.0",
-    "sortablejs": "^1.4.2",
+    "react-tap-event-plugin": "^1.0.0",
     "susy": "^2.2.12"
   },
   "devDependencies": {
