--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "material-ui": "^0.15.0-beta.2",
     "moment": "^2.13.0",
     "node-sass": "^3.8.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "react": "^15.2.0",
+    "react-addons-css-transition-group": "^15.2.0",
+    "react-dom": "^15.2.0",
     "react-dropzone": "^3.5.2",
     "react-router": "^2.5.2",
     "react-slick": "^0.12.2",
@@ -50,7 +51,7 @@
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.14",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
 }
