--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router": "^2.5.2",
     "react-slick": "^0.12.2",
     "react-tap-event-plugin": "^1.0.0",
+    "sass-mediaqueries": "^1.6.1",
     "susy": "^2.2.12"
   },
   "devDependencies": {
