--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "compass-mixins": "^0.12.10",
     "file": "^0.2.2",
+    "jquery": "^3.1.0",
     "lodash": "^4.11.1",
     "material-ui": "^0.15.0-beta.2",
     "moment": "^2.13.0",
