--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "sails.io.js": "^0.14.0",
+    "simple-line-icons": "^2.4.1",
     "socket.io-client": "^1.5.0"
   },
   "devDependencies": {
